objects/Five9LSP__Five9_List__c.object
<CustomObject>
    <description>Represents a dialing list in Five9. There should be a corresponding list in VCC administrator with the same name.</description>
    <fields>
        <fullName>Five9LSP__API_URL__c</fullName>
        <defaultValue>&quot;https://api.five9.com&quot;</defaultValue>
        <label>API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Controlling_Object__c</fullName>
        <label>Controlling Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Field_Mapping__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>Serialized JSON field map</description>
        <label>Field Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_Call_ASAP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field-level mapping of the F9CallASAP will override this setting</inlineHelpText>
        <label>Call ASAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_Domain__c</fullName>
        <label>Five9 Domain</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_User_Name__c</fullName>
        <label>Five9 User Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_User_Password__c</fullName>
        <label>Five9 User Password</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9LSP__VCC_Cache_Error__c</fullName>
        <label>VCC Cache Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Five9LSP__VCC_Cache_Last_Update__c</fullName>
        <description>Timestamp of the last time the VCC cache was updated.</description>
        <label>VCC Cache Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9LSP__VCC_Cache__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>Used to store cached info from VCC (CRM field names, list names, etc) as JSON</description>
        <label>VCC Cache</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>Five9 List</label>
    <listViews>
        <fullName>Five9LSP__All</fullName>
        <columns>NAME</columns>
        <columns>Five9LSP__Five9_Domain__c</columns>
        <columns>Five9LSP__Controlling_Object__c</columns>
        <columns>Five9LSP__API_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Five9 List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Five9 Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>